Making terminal be in the return close be in super w and spotify to be in the super v and adding special workspace

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -1,14 +1,13 @@
 # Application bindings
 $terminal = uwsm app -- alacritty
-$terminalFileManager = $terminal -e sh -c 'y'
 $fileManager = uwsm app -- nautilus --new-window 
 $browser = omarchy-launch-browser
 
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory=$(omarchy-cmd-terminal-cwd)
-bindd = SUPER, F, File manager, exec, $terminalFileManager 
+bindd = SUPER, F, File manager, exec, $fileManager
+bindd = SUPER, E, Terminal File manager, exec, $terminal -e zsh -i -c "y; zsh"
 bindd = SUPER, B, Browser, exec, $browser
 # bindd = SUPER, M, Music, exec, uwsm app -- spotify
-bindd = SUPER, S, Music, exec, uwsm app -- spotify
 bindd = SUPER, M, Omarchy menu, exec, omarchy-menu
 bindd = SUPER, N, Neovim, exec, $terminal -e nvim
 bindd = SUPER, T, Activity, exec, $terminal -e btop
@@ -41,14 +40,16 @@ bindd = SUPER, S, Open Special Workspace,togglespecialworkspace, S
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
 unbind = SUPER, V
-bindd = SUPER, V, Terminal, exec, $terminal --working-directory=$(omarchy-cmd-terminal-cwd)
+bindd = SUPER, V, Music, exec, uwsm app -- spotify
 bindd = SUPER SHIFT, F, Toggle Floating,togglefloating
+
 unbind = SUPER, SPACE
 bindd = SUPER, R, Launch apps, exec, walker -p "Start…"
-bindd = SUPER, Q, Close active window, killactive,
+
 unbind = SUPER, J
 bindd = SUPER, J, Move focus down, movefocus, d
 bindd = SUPER, X, Toggle split, togglesplit, # dwindle
+
 unbind = SUPER, K
 bindd = SUPER SHIFT, K, Show key bindings, exec, omarchy-menu-keybindings
 bindd = SUPER, K, Move focus up, movefocus, u
