adding my providers for email and calendar and notion and instagram

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -21,8 +21,10 @@ bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
 bindd = SUPER SHIFT, A, Gemini, exec, omarchy-launch-webapp "https://gemini.google.com/app"
 # bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
-bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
-bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
+bindd = SUPER SHIFT, N, Notion, exec, omarchy-launch-webapp "https://www.notion.com"
+bindd = SUPER SHIFT, I, Instagram, exec, omarchy-launch-webapp "https://instagram.com"
+bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com"
+bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://mail.google.com"
 bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
 bindd = SUPER SHIFT, W, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
