--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,4 @@
-general.import = [ "~/.config/omarchy/current/theme/alacritty.toml" ]
+general.import = ["~/.config/omarchy/current/theme/alacritty.toml"]
 
 [env]
 TERM = "xterm-256color"
@@ -12,12 +12,12 @@ size = 9
 [window]
 padding.x = 14
 padding.y = 14
+opacity = 0.8
+blur = true          # does not work in omarchy
 decorations = "None"
 
 [keyboard]
-bindings = [
-{ key = "F11", action = "ToggleFullscreen" }
-]
+bindings = [{ key = "F11", action = "ToggleFullscreen" }]
 
 [terminal.shell]
 program = "/usr/bin/zsh"
