adding blur in hyprland

--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -1,3 +1,12 @@
 # Extra autostart processes
 # exec-once = uwsm app -- my-service
 exec-once = uwsm app -- walker --gapplication-service
+
+# Here because there is no decoration in omarchy not default config
+decoration {
+    blur {
+        enabled = true
+        passes = 5
+        new_optimizations = true
+    }
+}
