--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -28,6 +28,7 @@ bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://mail.google.
 bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
 bindd = SUPER SHIFT, W, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
+bindd = SUPER SHIFT, D, Discord, exec, omarchy-launch-webapp "https://discord.com/channels/@me"
 # bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-webapp "https://messages.google.com/web/conversations"
 # bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
 # bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
