adding move to workspace special

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -39,6 +39,7 @@ bindd = SUPER, L, Move focus right, movefocus, r
 
 # Special Workspace
 bindd = SUPER, S, Open Special Workspace,togglespecialworkspace, S
+bind = SUPER SHIFT, S, movetoworkspace, special:S
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
