--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -6,7 +6,7 @@ $browser = omarchy-launch-browser
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory=$(omarchy-cmd-terminal-cwd)
 bindd = SUPER, F, File manager, exec, $fileManager
 bindd = SUPER, E, Terminal File manager, exec, $terminal -e zsh -i -c "y; exec env SKIP_FASTFETCH=1 zsh"
-bindd = SUPER, C, Show clipboard, exec, walker -m clipboard
+bindd = SUPER, C, Show clipboard, exec, uwsm app -- walker -m clipboard
 bindd = SUPER, B, Browser, exec, $browser
 # bindd = SUPER, M, Music, exec, uwsm app -- spotify
 bindd = SUPER, M, Omarchy menu, exec, omarchy-menu
