Config for bindings in hyprland with omarchy 3.0.0

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -1,37 +1,41 @@
 # Application bindings
 $terminal = uwsm app -- alacritty
-$fileManager = uwsm app -- nautilus --new-window 
 $browser = omarchy-launch-browser
 
-bindd = SUPER, return, Terminal, exec, $terminal --working-directory=$(omarchy-cmd-terminal-cwd)
-bindd = SUPER, F, File manager, exec, $fileManager
+bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, E, Terminal File manager, exec, $terminal -e zsh -i -c "y; exec env SKIP_FASTFETCH=1 zsh"
 bindd = SUPER, C, Show clipboard, exec, uwsm app -- walker -m clipboard
 bindd = SUPER, B, Browser, exec, $browser
-# bindd = SUPER, M, Music, exec, uwsm app -- spotify
+bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
+# bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER, M, Omarchy menu, exec, omarchy-menu
-bindd = SUPER, N, Neovim, exec, $terminal -e nvim
+bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER, T, Activity, exec, $terminal -e btop
 bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
-# bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
+# bindd = SUPER, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
 bindd = SUPER, G, Power Menu, exec, omarchy-menu system
-bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
+bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
-bindd = SUPER SHIFT, A, Gemini, exec, omarchy-launch-webapp "https://gemini.google.com/app"
+# bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 # bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
-bindd = SUPER SHIFT, N, Notion, exec, omarchy-launch-webapp "https://www.notion.com"
-bindd = SUPER SHIFT, I, Instagram, exec, omarchy-launch-webapp "https://instagram.com"
+bindd = SUPER SHIFT, A, Gemini, exec, omarchy-launch-webapp "https://gemini.google.com/app"
+# bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
 bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com"
+# bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
 bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://mail.google.com"
-bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
-bindd = SUPER SHIFT, W, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
-bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
-bindd = SUPER SHIFT, D, Discord, exec, omarchy-launch-webapp "https://discord.com/channels/@me"
-# bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-webapp "https://messages.google.com/web/conversations"
+# bindd = SUPER, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
+bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-or-focus-webapp "https://youtube.com/"
+# bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
+bindd = SUPER SHIFT, W, WhatsApp, exec, omarchy-launch-or-focus-webapp "https://web.whatsapp.com/"
 # bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
 # bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
+bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
+bindd = SUPER SHIFT, N, Notion, exec, omarchy-launch-webapp "https://www.notion.com"
+bindd = SUPER SHIFT, I, Instagram, exec, omarchy-launch-webapp "https://instagram.com"
+bindd = SUPER SHIFT, D, Discord, exec, omarchy-launch-webapp "https://discord.com/channels/@me"
 
 # Move focus with SUPER
 bindd = SUPER, H, Move focus left, movefocus, l
@@ -45,7 +49,7 @@ bind = SUPER SHIFT, S, movetoworkspace, special:S
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
 unbind = SUPER, V
-bindd = SUPER, V, Music, exec, uwsm app -- spotify
+bindd = SUPER, V, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER SHIFT, F, Toggle Floating,togglefloating
 
 unbind = SUPER, SPACE
