--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -29,7 +29,7 @@ bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://mail.google.
 # bindd = SUPER, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
 bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-or-focus-webapp "https://youtube.com/"
 # bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
-bindd = SUPER SHIFT, W, WhatsApp, exec, omarchy-launch-or-focus-webapp "https://web.whatsapp.com/"
+bindd = SUPER SHIFT, W, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
 # bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
 # bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
