--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -27,7 +27,7 @@ bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://calendar.
 # bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
 bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://mail.google.com"
 # bindd = SUPER, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
-bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-or-focus-webapp "https://youtube.com/"
+bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
 # bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
 bindd = SUPER SHIFT, W, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
 # bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
