Adding terminal to bindings

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -1,5 +1,5 @@
 # Application bindings
-$terminal = uwsm app -- alacritty
+$terminal = uwsm app -- $TERMINAL
 $browser = omarchy-launch-browser
 
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
