Adding workspaces config for apps

--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -1,3 +1,24 @@
 # Extra autostart processes
 # exec-once = uwsm app -- my-service
 exec-once = uwsm app -- walker --gapplication-service
+
+
+# Workspace 1
+exec-once = [workspace 1 silent] uwsm app -- $TERMINAL --working-directory="$(omarchy-cmd-terminal-cwd)"
+# Workspace 2
+exec-once = [workspace 2 silent] omarchy-launch-browser
+# Workspace 3
+workspace = 3, on-created-empty: sh -c "omarchy-launch-webapp 'https://calendar.google.com' & \
+    sleep 0.1 && \
+    omarchy-launch-webapp 'https://mail.google.com' & \
+    sleep 0.1 && \
+    omarchy-launch-webapp 'https://www.notion.com'"
+
+# Workspace Special
+workspace = special:S, on-created-empty: sh -c "omarchy-launch-or-focus-webapp WhatsApp 'https://web.whatsapp.com/' & \
+    sleep 0.3 && \
+    omarchy-launch-or-focus spotify & \
+    sleep 0.5 && \
+    omarchy-launch-webapp 'https://instagram.com' & \
+    sleep 0.5 && \
+    omarchy-launch-webapp 'https://x.com/'"
