--- a/hypr/looknfeel.conf
+++ b/hypr/looknfeel.conf
@@ -20,3 +20,9 @@ decoration {
         new_optimizations = true
     }
 }
+
+# https://wiki.hypr.land/Configuring/Dwindle-Layout/
+dwindle {
+    # Avoid overly wide single-window layouts on wide screens
+    # single_window_aspect_ratio = 1 1
+}
