--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -17,7 +17,10 @@ blur = true          # does not work in omarchy
 decorations = "None"
 
 [keyboard]
-bindings = [{ key = "F11", action = "ToggleFullscreen" }]
+bindings = [
+  { key = "Insert", mods = "Shift", action = "Paste" },
+  { key = "Insert", mods = "Control", action = "Copy" },
+]
 
 [terminal.shell]
 program = "/usr/bin/zsh"
