--- a/hypr/input.conf
+++ b/hypr/input.conf
@@ -2,10 +2,9 @@
 # See https://wiki.hypr.land/Configuring/Variables/#input
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
-  # kb_layout = us,dk,eu
   kb_layout = us
   kb_variant = intl
-  kb_options = compose:caps # ,grp:alts_toggle
+  kb_options = compose:caps # ,grp:shifts_toggle
 
   # Change speed of keyboard repeat
   repeat_rate = 40
