--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -67,7 +67,7 @@
     "format": "{:L%A %H:%M}",
     "format-alt": "{:L%d %B W%V %Y}",
     "tooltip": false,
-    "on-click-right": "omarchy-cmd-tzupdate",
+    "on-click-right": "omarchy-launch-floating-terminal-with-presentation omarchy-tz-select",
   },
   "network": {
     "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
@@ -128,7 +128,7 @@
     "modules": ["custom/expand-icon", "tray"],
   },
   "custom/expand-icon": {
-    "format": " ",
+    "format": "",
     "tooltip": false,
   },
   "custom/screenrecording-indicator": {
@@ -139,6 +139,6 @@
   },
   "tray": {
     "icon-size": 12,
-    "spacing": 12,
+    "spacing": 17,
   },
 }
