--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -1,59 +1,52 @@
 # Application bindings
-$terminal = uwsm app -- $TERMINAL
+$terminal = uwsm-app -- $TERMINAL
 $browser = omarchy-launch-browser
 
-bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
-bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
+bindd = SUPER, RETURN, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window
 bindd = SUPER, E, Terminal File manager, exec, $terminal -e zsh -i -c "y; exec env SKIP_FASTFETCH=1 zsh"
-bindd = SUPER, C, Show clipboard, exec, uwsm app -- walker -m clipboard
-bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
-# bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
-bindd = SUPER, M, Omarchy menu, exec, omarchy-menu
-bindd = SUPER, N, Editor, exec, omarchy-launch-editor
-bindd = SUPER, T, Activity, exec, $terminal -e btop
-bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
-# bindd = SUPER, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
-bindd = SUPER, G, Power Menu, exec, omarchy-menu system
-bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
-bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
+bindd = SUPER SHIFT, B, Browser, exec, $browser
+bindd = SUPER SHIFT ALT, B, Browser (private), exec, $browser --private
+bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
+bindd = SUPER SHIFT ALT, N, Editor, exec, omarchy-launch-editor
+bindd = SUPER SHIFT, N, Notion, exec, omarchy-launch-webapp "https://www.notion.com"
+bindd = SUPER SHIFT, T, Activity, exec, $terminal -e btop
+bindd = SUPER SHIFT, D, Docker, exec, $terminal -e lazydocker
+bindd = SUPER SHIFT, G, Signal, exec, omarchy-launch-or-focus signal "uwsm-app -- signal-desktop"
+bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus "^obsidian$" "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
+bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- 1password
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
-# bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
-# bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
+# bindd = SUPER SHIFT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 bindd = SUPER SHIFT, A, Gemini, exec, omarchy-launch-webapp "https://gemini.google.com/app"
-# bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
+bindd = SUPER SHIFT ALT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
+# bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
 bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com"
-# bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
+# bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
 bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://mail.google.com"
-# bindd = SUPER, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
-bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
-# bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
+bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
+# bindd = SUPER SHIFT ALT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
 bindd = SUPER SHIFT, W, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
-# bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
-# bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
+# bindd = SUPER SHIFT CTRL, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
-bindd = SUPER SHIFT, N, Notion, exec, omarchy-launch-webapp "https://www.notion.com"
+bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 bindd = SUPER SHIFT, I, Instagram, exec, omarchy-launch-webapp "https://instagram.com"
-bindd = SUPER SHIFT, D, Discord, exec, omarchy-launch-webapp "https://discord.com/channels/@me"
+bindd = SUPER SHIFT ALT, D, Discord, exec, omarchy-launch-webapp "https://discord.com/channels/@me"
+
+# Utilities
+bindd = SUPER, R, Launch apps, exec, omarchy-launch-walker
+bindd = SUPER, M, Omarchy menu, exec, omarchy-menu
+
+# Special Workspace
+bindd = SUPER, S, Open Special Workspace,togglespecialworkspace, S
 
 # Move focus with SUPER
 bindd = SUPER, H, Move focus left, movefocus, l
 bindd = SUPER, L, Move focus right, movefocus, r
 
-# Special Workspace
-bindd = SUPER, S, Open Special Workspace,togglespecialworkspace, S
-bind = SUPER SHIFT, S, movetoworkspace, special:S
-
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
-unbind = SUPER, V
-bindd = SUPER, V, Music, exec, omarchy-launch-or-focus spotify
-bindd = SUPER SHIFT, F, Toggle Floating,togglefloating
-
-unbind = SUPER, SPACE
-bindd = SUPER, R, Launch apps, exec, walker -p "Start…"
 
 unbind = SUPER, J
 bindd = SUPER, J, Move focus down, movefocus, d
@@ -62,3 +55,7 @@ bindd = SUPER, X, Toggle split, togglesplit, # dwindle
 unbind = SUPER, K
 bindd = SUPER SHIFT, K, Show key bindings, exec, omarchy-menu-keybindings
 bindd = SUPER, K, Move focus up, movefocus, u
+
+
+unbind= SUPER, G
+bindd = SUPER, G, Power Menu, exec, omarchy-menu system
