--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -26,6 +26,7 @@ bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://calendar.
 bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://mail.google.com"
 bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
 # bindd = SUPER SHIFT ALT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
+# bindd = SUPER SHIFT, W, Typora, exec, uwsm-app -- typora --enable-wayland-ime
 bindd = SUPER SHIFT, W, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
 # bindd = SUPER SHIFT CTRL, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
@@ -36,9 +37,6 @@ bindd = SUPER SHIFT ALT, D, Discord, exec, omarchy-launch-webapp "https://discor
 # Utilities
 bindd = SUPER, R, Launch apps, exec, omarchy-launch-walker
 bindd = SUPER, M, Omarchy menu, exec, omarchy-menu
-
-# Special Workspace
-bindd = SUPER, S, Open Special Workspace,togglespecialworkspace, S
 
 # Move focus with SUPER
 bindd = SUPER, H, Move focus left, movefocus, l
