New special workspace name

--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -13,7 +13,7 @@ workspace = 3, on-created-empty: sh -c "omarchy-launch-webapp 'https://calendar.
     omarchy-launch-webapp 'https://www.notion.com'"
 
 # Workspace Special
-workspace = special:S, on-created-empty: sh -c "omarchy-launch-or-focus-webapp WhatsApp 'https://web.whatsapp.com/' & \
+workspace = special:scratchpad, on-created-empty: sh -c "omarchy-launch-or-focus-webapp WhatsApp 'https://web.whatsapp.com/' & \
     sleep 0.3 && \
     omarchy-launch-or-focus spotify & \
     sleep 0.5 && \
